--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "pretest": "npm run build"
+    "test":"mocha --require ts-node/register src/**/*.test.ts --project tsconfig.json"
   },
   "keywords": [
     "koa"
@@ -18,8 +18,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
     "@types/co-body": "^5.1.0",
+    "@types/mocha": "^8.0.3",
+    "mocha": "^8.1.3",
     "rollup": "^2.26.6",
     "rollup-plugin-typescript2": "^0.27.2",
+    "ts-node": "^9.0.0",
     "tslib": "^2.0.1",
     "typescript": "^3.8.3"
   },
