--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "keywords": [
     "koa"
   ],
-  "description": "A koa middleware for checking querystring and body.",
+  "description": "Koa middlewares, for parsing and checking query string or JSON body.",
   "main": "./lib/main.cjs.js",
   "module": "./lib/main.esm.js",
   "typings": "./lib/typings/index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test":"mocha --require ts-node/register src/**/*.test.ts --project tsconfig.json",
+    "test": "mocha --require ts-node/register src/**/*.test.ts --project tsconfig.json",
+    "coverage": "nyc npm run test", 
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/co-body": "^5.1.0",
     "@types/mocha": "^8.0.3",
     "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
     "rollup": "^2.26.6",
     "rollup-plugin-typescript2": "^0.27.2",
     "ts-node": "^9.0.0",
