--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "koa-paramcheck",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "author": "Song Shuangfei",
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [
     "koa"
   ],
